--- a/layouts/partials/pagination.html
+++ b/layouts/partials/pagination.html
@@ -13,6 +13,6 @@
 <script>
   var base_url = "",
     pagination_next_url = base_url + '/posts/page2',
-    pagination_next_page_number = '{{ add .Paginator.PageNumber 1 }}',
+    pagination_next_page_number = '{{ add .Paginator.CurrentPage.PageNumber 1 }}',
     pagination_available_pages_number = '{{ .Paginator.TotalPages }}';
 </script>
