--- a/layouts/partials/pagination.html
+++ b/layouts/partials/pagination.html
@@ -1,18 +1,20 @@
+{{/* Unified Paginator logic */}}
 {{ $paginator := .Paginator }}
+{{ if not $paginator }}
+  {{ $paginator = . }}
+{{ end }}
 
 {{ if gt $paginator.TotalPages 1 }}
-<!-- begin pagination -->
 <div class="container animate">
   <div class="pagination">
     <button class="load-more-posts button button--big">Load more posts</button>
   </div>
 </div>
-<!-- end pagination -->
 {{ end }}
 
 <script>
   var base_url = "",
     pagination_next_url = base_url + '/posts/page2',
-    pagination_next_page_number = '{{ if .Paginator.CurrentPage }}{{ add .Paginator.CurrentPage.PageNumber 1 }}{{ else }}{{ add .Paginator.PageNumber 1 }}{{ end }}',
-    pagination_available_pages_number = '{{ .Paginator.TotalPages }}';
+    pagination_next_page_number = '{{ add $paginator.PageNumber 1 }}',
+    pagination_available_pages_number = '{{ $paginator.TotalPages }}';
 </script>
