--- a/layouts/partials/pagination.html
+++ b/layouts/partials/pagination.html
@@ -1,4 +1,4 @@
-{{/* Unified Paginator logic */}}
+{{/* 1. 統一變數：確保 $paginator 永遠是正確的分頁物件 */}}
 {{ $paginator := .Paginator }}
 {{ if not $paginator }}
   {{ $paginator = . }}
@@ -15,6 +15,9 @@
 <script>
   var base_url = "",
     pagination_next_url = base_url + '/posts/page2',
-    pagination_next_page_number = '{{ add $paginator.PageNumber 1 }}',
+    
+    // 2. 使用 if/else 智能判斷，處理兩種不同的頁碼變數
+    pagination_next_page_number = '{{ if $paginator.CurrentPage }}{{ add $paginator.CurrentPage.PageNumber 1 }}{{ else }}{{ add $paginator.PageNumber 1 }}{{ end }}',
+    
     pagination_available_pages_number = '{{ $paginator.TotalPages }}';
 </script>
