--- a/layouts/partials/category/default.html
+++ b/layouts/partials/category/default.html
@@ -24,7 +24,7 @@
         </div>
 
         {{ if gt (.paginator.TotalPages | default 1) 1 }}
-        {{ partial "pagination.html" . }}
+        {{ partial "pagination.html" .Paginator }}
         {{ end }}
     </div>
 </section>
