fix build error

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -53,7 +53,7 @@
       {{ end }}
     </div>
   </div>
-  {{ partial "pagination.html" . }}
+  {{ partial "pagination.html" $paginator }}
 </section>
 
 {{ else if $isCategory }}
