--- a/layouts/partials/category/default.html
+++ b/layouts/partials/category/default.html
@@ -1,30 +1,32 @@
 <section class="section tags">
-    <div class="tags__inner">
-        <div class="container">
-            <div class="row">
-                <div class="col col-12">
-                    <div class="tag__info">
-                        <h1 class="tag__title">
-                            {{ .title }}
-                            <span class="tag__counter">{{ .counter }}</span>
-                        </h1>
-                    </div>
-                </div>
-            </div>
+  <div class="tags__inner">
+    <div class="container">
+      <div class="row">
+        <div class="col col-12">
+          <div class="tag__info">
+            <h1 class="tag__title">
+              {{ .title }}
+              <span class="tag__counter">{{ .counter }}</span>
+            </h1>
+          </div>
         </div>
-
-        <div class="container animate">
-            <div class="row">
-                {{ range .pages }}
-                <div class="col col-4 col-d-6 col-t-12">
-                    {{ partial "article.html" (dict "context" .) }}
-                </div>
-                {{ end }}
-            </div>
-        </div>
-
-        {{ if gt (.paginator.TotalPages | default 1) 1 }}
-        {{ partial "pagination.html" .Paginator }}
-        {{ end }}
+      </div>
     </div>
+
+    <div class="container animate">
+      <div class="row">
+        {{ range .pages }}
+          <div class="col col-4 col-d-6 col-t-12">
+            {{ partial "article.html" (dict "context" .) }}
+          </div>
+        {{ end }}
+      </div>
+    </div>
+
+    {{ with .paginator }}
+      {{ if gt .TotalPages 1 }}
+        {{ partial "pagination.html" . }}
+      {{ end }}
+    {{ end }}
+  </div>
 </section>
